# models/sysauditlmslog.go
@@ -1,0 +1,30 @@
+package models
+
+import "time"
+
+const TableNameSysauditlmslog = "sysauditlmslog"
+
+// Sysauditlmslog mapped from table <sysauditlmslog>
+type Sysauditlmslog struct {
+	ID                   int64      `gorm:"column:Id;type:bigint;primaryKey;autoIncrement:true" json:"Id"`
+	BrowserInfo          *string    `gorm:"column:BrowserInfo;type:varchar(512)" json:"BrowserInfo"`
+	ClientIPAddress      *string    `gorm:"column:ClientIpAddress;type:varchar(64)" json:"ClientIpAddress"`
+	ClientName           *string    `gorm:"column:ClientName;type:varchar(128)" json:"ClientName"`
+	CustomData           *string    `gorm:"column:CustomData;type:varchar(2000)" json:"CustomData"`
+	Exception            *string    `gorm:"column:Exception;type:varchar(2000)" json:"Exception"`
+	ExecutionDuration    int64      `gorm:"column:ExecutionDuration;type:int;not null" json:"ExecutionDuration"`
+	ExecutionTime        *time.Time `gorm:"column:ExecutionTime;type:datetime(6)" json:"ExecutionTime"`
+	ImpersonatorTenantID *int64     `gorm:"column:ImpersonatorTenantId;type:int" json:"ImpersonatorTenantId"`
+	ImpersonatorUserID   *int64     `gorm:"column:ImpersonatorUserId;type:bigint" json:"ImpersonatorUserId"`
+	MethodName           string     `gorm:"column:MethodName;type:varchar(256);not null" json:"MethodName"`
+	Parameters           *string    `gorm:"column:Parameters;type:varchar(1024)" json:"Parameters"`
+	ServiceName          string     `gorm:"column:ServiceName;type:varchar(256);not null" json:"ServiceName"`
+	TenantID             *int64     `gorm:"column:TenantId;type:int" json:"TenantId"`
+	UserID               *int64     `gorm:"column:UserId;type:bigint" json:"UserId"`
+	ReturnValue          *string    `gorm:"column:ReturnValue;type:longtext" json:"ReturnValue"`
+}
+
+// TableName Sysauditlmslog's table name
+func (*Sysauditlmslog) TableName() string {
+	return TableNameSysauditlmslog
+}
